tests/Errors/Generic/Commenting/Todo/TaskFound.php
<?php

declare(strict_types=1);

$foo = 'bar';

// TODO: Something to do
echo $foo;
